--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -240,13 +240,13 @@ table {
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 5px;
-  background: #373737;
+  background: #808080;
   color: #fff;
  }
 
 td {
   padding: 2px;
-  border: 0px solid #373737;
+  border: 0px solid #C0C0C0;
  }
 
 form {
